--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trust/webcrypto": "^0.9.2",
+    "atob": "^2.1.2",
+    "node-webcrypto-ossl": "^1.0.42",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "text-encoder": "0.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +25,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
