--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-webcrypto-ossl": "^1.0.47",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-highlight": "^0.12.0",
     "react-scripts": "3.0.1",
     "text-encoder": "0.0.4"
   },
